src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> json
Rule 1     json -> LLAVE_ABRE contenido_json LLAVE_CIERRA
Rule 2     contenido_json -> equipos
Rule 3     contenido_json -> equipos COMA version
Rule 4     contenido_json -> equipos COMA firma_digital
Rule 5     contenido_json -> equipos COMA version COMA firma_digital
Rule 6     contenido_json -> equipos COMA firma_digital COMA version
Rule 7     contenido_json -> version COMA equipos
Rule 8     contenido_json -> version COMA equipos COMA firma_digital
Rule 9     contenido_json -> firma_digital COMA equipos
Rule 10    contenido_json -> firma_digital COMA equipos COMA version
Rule 11    contenido_json -> version COMA firma_digital COMA equipos
Rule 12    contenido_json -> firma_digital COMA version COMA equipos
Rule 13    equipos -> EQUIPOS DOS_PUNTOS CORCHETE_ABRE lista_equipos CORCHETE_CIERRA
Rule 14    lista_equipos -> equipo
Rule 15    lista_equipos -> lista_equipos COMA equipo
Rule 16    equipo -> LLAVE_ABRE campos_equipo LLAVE_CIERRA
Rule 17    campos_equipo -> campo_equipo
Rule 18    campos_equipo -> campos_equipo COMA campo_equipo
Rule 19    campo_equipo -> NOMBRE_EQUIPO DOS_PUNTOS valor_simple
Rule 20    campo_equipo -> IDENTIDAD_EQUIPO DOS_PUNTOS valor_simple
Rule 21    campo_equipo -> CARRERA DOS_PUNTOS valor_simple
Rule 22    campo_equipo -> ASIGNATURA DOS_PUNTOS valor_simple
Rule 23    campo_equipo -> UNIVERSIDAD_REGIONAL DOS_PUNTOS valor_simple
Rule 24    campo_equipo -> ALIANZA_EQUIPO DOS_PUNTOS valor_simple
Rule 25    campo_equipo -> A_STRING DOS_PUNTOS valor_simple
Rule 26    campo_equipo -> DIRECCION DOS_PUNTOS LLAVE_ABRE campos_direccion LLAVE_CIERRA
Rule 27    campo_equipo -> INTEGRANTES DOS_PUNTOS CORCHETE_ABRE lista_integrantes CORCHETE_CIERRA
Rule 28    campo_equipo -> PROYECTOS DOS_PUNTOS CORCHETE_ABRE lista_proyectos CORCHETE_CIERRA
Rule 29    valor_simple -> A_STRING
Rule 30    valor_simple -> LINK
Rule 31    valor_simple -> EMAIL
Rule 32    valor_simple -> NUMBER
Rule 33    valor_simple -> TRUE
Rule 34    valor_simple -> FALSE
Rule 35    valor_simple -> NULL
Rule 36    valor_simple -> DATE
Rule 37    campos_direccion -> campo_direccion
Rule 38    campos_direccion -> campos_direccion COMA campo_direccion
Rule 39    campo_direccion -> CALLE DOS_PUNTOS valor_simple
Rule 40    campo_direccion -> CIUDAD DOS_PUNTOS valor_simple
Rule 41    campo_direccion -> PAIS DOS_PUNTOS valor_simple
Rule 42    lista_integrantes -> integrante
Rule 43    lista_integrantes -> lista_integrantes COMA integrante
Rule 44    integrante -> LLAVE_ABRE campos_integrante LLAVE_CIERRA
Rule 45    campos_integrante -> campo_integrante
Rule 46    campos_integrante -> campos_integrante COMA campo_integrante
Rule 47    campo_integrante -> NOMBRE DOS_PUNTOS valor_simple
Rule 48    campo_integrante -> EDAD DOS_PUNTOS valor_simple
Rule 49    campo_integrante -> CARGO DOS_PUNTOS valor_simple
Rule 50    campo_integrante -> FOTO DOS_PUNTOS valor_simple
Rule 51    campo_integrante -> EMAIL DOS_PUNTOS campo_email
Rule 52    campo_integrante -> HABILIDADES DOS_PUNTOS valor_simple
Rule 53    campo_integrante -> SALARIO DOS_PUNTOS valor_simple
Rule 54    campo_integrante -> ACTIVO DOS_PUNTOS valor_simple
Rule 55    campo_integrante -> A_STRING DOS_PUNTOS valor_simple
Rule 56    campo_email -> EMAIL DOS_PUNTOS A_STRING
Rule 57    lista_proyectos -> proyecto
Rule 58    lista_proyectos -> lista_proyectos COMA proyecto
Rule 59    proyecto -> LLAVE_ABRE campos_proyecto LLAVE_CIERRA
Rule 60    campos_proyecto -> campo_proyecto
Rule 61    campos_proyecto -> campos_proyecto COMA campo_proyecto
Rule 62    campo_proyecto -> NOMBRE DOS_PUNTOS valor_simple
Rule 63    campo_proyecto -> ESTADO DOS_PUNTOS valor_simple
Rule 64    campo_proyecto -> RESUMEN DOS_PUNTOS valor_simple
Rule 65    campo_proyecto -> FECHA_INICIO DOS_PUNTOS valor_simple
Rule 66    campo_proyecto -> FECHA_FIN DOS_PUNTOS valor_simple
Rule 67    campo_proyecto -> VIDEO DOS_PUNTOS valor_simple
Rule 68    campo_proyecto -> CONCLUSION DOS_PUNTOS valor_simple
Rule 69    campo_proyecto -> A_STRING DOS_PUNTOS valor_simple
Rule 70    campo_proyecto -> TAREAS DOS_PUNTOS CORCHETE_ABRE lista_tareas CORCHETE_CIERRA
Rule 71    lista_tareas -> tarea
Rule 72    lista_tareas -> lista_tareas COMA tarea
Rule 73    tarea -> LLAVE_ABRE campos_tarea LLAVE_CIERRA
Rule 74    campos_tarea -> campo_tarea
Rule 75    campos_tarea -> campos_tarea COMA campo_tarea
Rule 76    campo_tarea -> NOMBRE DOS_PUNTOS valor_simple
Rule 77    campo_tarea -> ESTADO DOS_PUNTOS valor_simple
Rule 78    campo_tarea -> RESUMEN DOS_PUNTOS valor_simple
Rule 79    campo_tarea -> FECHA_INICIO DOS_PUNTOS valor_simple
Rule 80    campo_tarea -> FECHA_FIN DOS_PUNTOS valor_simple
Rule 81    campo_tarea -> A_STRING DOS_PUNTOS valor_simple
Rule 82    version -> VERSION DOS_PUNTOS valor_simple
Rule 83    firma_digital -> FIRMA_DIGITAL DOS_PUNTOS valor_simple

Terminals, with rules where they appear

ACTIVO               : 54
ALIANZA_EQUIPO       : 24
ASIGNATURA           : 22
A_STRING             : 25 29 55 56 69 81
CALLE                : 39
CARGO                : 49
CARRERA              : 21
CIUDAD               : 40
COMA                 : 3 4 5 5 6 6 7 8 8 9 10 10 11 11 12 12 15 18 38 43 46 58 61 72 75
CONCLUSION           : 68
CORCHETE_ABRE        : 13 27 28 70
CORCHETE_CIERRA      : 13 27 28 70
DATE                 : 36
DIRECCION            : 26
DOS_PUNTOS           : 13 19 20 21 22 23 24 25 26 27 28 39 40 41 47 48 49 50 51 52 53 54 55 56 62 63 64 65 66 67 68 69 70 76 77 78 79 80 81 82 83
EDAD                 : 48
EMAIL                : 31 51 56
EQUIPOS              : 13
ESTADO               : 63 77
FALSE                : 34
FECHA_FIN            : 66 80
FECHA_INICIO         : 65 79
FIRMA_DIGITAL        : 83
FOTO                 : 50
HABILIDADES          : 52
IDENTIDAD_EQUIPO     : 20
INTEGRANTES          : 27
LINK                 : 30
LLAVE_ABRE           : 1 16 26 44 59 73
LLAVE_CIERRA         : 1 16 26 44 59 73
NOMBRE               : 47 62 76
NOMBRE_EQUIPO        : 19
NULL                 : 35
NUMBER               : 32
PAIS                 : 41
PROYECTOS            : 28
RESUMEN              : 64 78
SALARIO              : 53
TAREAS               : 70
TRUE                 : 33
UNIVERSIDAD_REGIONAL : 23
VERSION              : 82
VIDEO                : 67
error                : 

Nonterminals, with rules where they appear

campo_direccion      : 37 38
campo_email          : 51
campo_equipo         : 17 18
campo_integrante     : 45 46
campo_proyecto       : 60 61
campo_tarea          : 74 75
campos_direccion     : 26 38
campos_equipo        : 16 18
campos_integrante    : 44 46
campos_proyecto      : 59 61
campos_tarea         : 73 75
contenido_json       : 1
equipo               : 14 15
equipos              : 2 3 4 5 6 7 8 9 10 11 12
firma_digital        : 4 5 6 8 9 10 11 12
integrante           : 42 43
json                 : 0
lista_equipos        : 13 15
lista_integrantes    : 27 43
lista_proyectos      : 28 58
lista_tareas         : 70 72
proyecto             : 57 58
tarea                : 71 72
valor_simple         : 19 20 21 22 23 24 25 39 40 41 47 48 49 50 52 53 54 55 62 63 64 65 66 67 68 69 76 77 78 79 80 81 82 83
version              : 3 5 6 7 8 10 11 12

Parsing method: LALR

state 0

    (0) S' -> . json
    (1) json -> . LLAVE_ABRE contenido_json LLAVE_CIERRA

    LLAVE_ABRE      shift and go to state 2

    json                           shift and go to state 1

state 1

    (0) S' -> json .



state 2

    (1) json -> LLAVE_ABRE . contenido_json LLAVE_CIERRA
    (2) contenido_json -> . equipos
    (3) contenido_json -> . equipos COMA version
    (4) contenido_json -> . equipos COMA firma_digital
    (5) contenido_json -> . equipos COMA version COMA firma_digital
    (6) contenido_json -> . equipos COMA firma_digital COMA version
    (7) contenido_json -> . version COMA equipos
    (8) contenido_json -> . version COMA equipos COMA firma_digital
    (9) contenido_json -> . firma_digital COMA equipos
    (10) contenido_json -> . firma_digital COMA equipos COMA version
    (11) contenido_json -> . version COMA firma_digital COMA equipos
    (12) contenido_json -> . firma_digital COMA version COMA equipos
    (13) equipos -> . EQUIPOS DOS_PUNTOS CORCHETE_ABRE lista_equipos CORCHETE_CIERRA
    (82) version -> . VERSION DOS_PUNTOS valor_simple
    (83) firma_digital -> . FIRMA_DIGITAL DOS_PUNTOS valor_simple

    EQUIPOS         shift and go to state 7
    VERSION         shift and go to state 8
    FIRMA_DIGITAL   shift and go to state 9

    contenido_json                 shift and go to state 3
    equipos                        shift and go to state 4
    version                        shift and go to state 5
    firma_digital                  shift and go to state 6

state 3

    (1) json -> LLAVE_ABRE contenido_json . LLAVE_CIERRA

    LLAVE_CIERRA    shift and go to state 10


state 4

    (2) contenido_json -> equipos .
    (3) contenido_json -> equipos . COMA version
    (4) contenido_json -> equipos . COMA firma_digital
    (5) contenido_json -> equipos . COMA version COMA firma_digital
    (6) contenido_json -> equipos . COMA firma_digital COMA version

    LLAVE_CIERRA    reduce using rule 2 (contenido_json -> equipos .)
    COMA            shift and go to state 11


state 5

    (7) contenido_json -> version . COMA equipos
    (8) contenido_json -> version . COMA equipos COMA firma_digital
    (11) contenido_json -> version . COMA firma_digital COMA equipos

    COMA            shift and go to state 12


state 6

    (9) contenido_json -> firma_digital . COMA equipos
    (10) contenido_json -> firma_digital . COMA equipos COMA version
    (12) contenido_json -> firma_digital . COMA version COMA equipos

    COMA            shift and go to state 13


state 7

    (13) equipos -> EQUIPOS . DOS_PUNTOS CORCHETE_ABRE lista_equipos CORCHETE_CIERRA

    DOS_PUNTOS      shift and go to state 14


state 8

    (82) version -> VERSION . DOS_PUNTOS valor_simple

    DOS_PUNTOS      shift and go to state 15


state 9

    (83) firma_digital -> FIRMA_DIGITAL . DOS_PUNTOS valor_simple

    DOS_PUNTOS      shift and go to state 16


state 10

    (1) json -> LLAVE_ABRE contenido_json LLAVE_CIERRA .

    $end            reduce using rule 1 (json -> LLAVE_ABRE contenido_json LLAVE_CIERRA .)


state 11

    (3) contenido_json -> equipos COMA . version
    (4) contenido_json -> equipos COMA . firma_digital
    (5) contenido_json -> equipos COMA . version COMA firma_digital
    (6) contenido_json -> equipos COMA . firma_digital COMA version
    (82) version -> . VERSION DOS_PUNTOS valor_simple
    (83) firma_digital -> . FIRMA_DIGITAL DOS_PUNTOS valor_simple

    VERSION         shift and go to state 8
    FIRMA_DIGITAL   shift and go to state 9

    version                        shift and go to state 17
    firma_digital                  shift and go to state 18

state 12

    (7) contenido_json -> version COMA . equipos
    (8) contenido_json -> version COMA . equipos COMA firma_digital
    (11) contenido_json -> version COMA . firma_digital COMA equipos
    (13) equipos -> . EQUIPOS DOS_PUNTOS CORCHETE_ABRE lista_equipos CORCHETE_CIERRA
    (83) firma_digital -> . FIRMA_DIGITAL DOS_PUNTOS valor_simple

    EQUIPOS         shift and go to state 7
    FIRMA_DIGITAL   shift and go to state 9

    equipos                        shift and go to state 19
    firma_digital                  shift and go to state 20

state 13

    (9) contenido_json -> firma_digital COMA . equipos
    (10) contenido_json -> firma_digital COMA . equipos COMA version
    (12) contenido_json -> firma_digital COMA . version COMA equipos
    (13) equipos -> . EQUIPOS DOS_PUNTOS CORCHETE_ABRE lista_equipos CORCHETE_CIERRA
    (82) version -> . VERSION DOS_PUNTOS valor_simple

    EQUIPOS         shift and go to state 7
    VERSION         shift and go to state 8

    equipos                        shift and go to state 21
    version                        shift and go to state 22

state 14

    (13) equipos -> EQUIPOS DOS_PUNTOS . CORCHETE_ABRE lista_equipos CORCHETE_CIERRA

    CORCHETE_ABRE   shift and go to state 23


state 15

    (82) version -> VERSION DOS_PUNTOS . valor_simple
    (29) valor_simple -> . A_STRING
    (30) valor_simple -> . LINK
    (31) valor_simple -> . EMAIL
    (32) valor_simple -> . NUMBER
    (33) valor_simple -> . TRUE
    (34) valor_simple -> . FALSE
    (35) valor_simple -> . NULL
    (36) valor_simple -> . DATE

    A_STRING        shift and go to state 25
    LINK            shift and go to state 26
    EMAIL           shift and go to state 27
    NUMBER          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NULL            shift and go to state 31
    DATE            shift and go to state 32

    valor_simple                   shift and go to state 24

state 16

    (83) firma_digital -> FIRMA_DIGITAL DOS_PUNTOS . valor_simple
    (29) valor_simple -> . A_STRING
    (30) valor_simple -> . LINK
    (31) valor_simple -> . EMAIL
    (32) valor_simple -> . NUMBER
    (33) valor_simple -> . TRUE
    (34) valor_simple -> . FALSE
    (35) valor_simple -> . NULL
    (36) valor_simple -> . DATE

    A_STRING        shift and go to state 25
    LINK            shift and go to state 26
    EMAIL           shift and go to state 27
    NUMBER          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NULL            shift and go to state 31
    DATE            shift and go to state 32

    valor_simple                   shift and go to state 33

state 17

    (3) contenido_json -> equipos COMA version .
    (5) contenido_json -> equipos COMA version . COMA firma_digital

    LLAVE_CIERRA    reduce using rule 3 (contenido_json -> equipos COMA version .)
    COMA            shift and go to state 34


state 18

    (4) contenido_json -> equipos COMA firma_digital .
    (6) contenido_json -> equipos COMA firma_digital . COMA version

    LLAVE_CIERRA    reduce using rule 4 (contenido_json -> equipos COMA firma_digital .)
    COMA            shift and go to state 35


state 19

    (7) contenido_json -> version COMA equipos .
    (8) contenido_json -> version COMA equipos . COMA firma_digital

    LLAVE_CIERRA    reduce using rule 7 (contenido_json -> version COMA equipos .)
    COMA            shift and go to state 36


state 20

    (11) contenido_json -> version COMA firma_digital . COMA equipos

    COMA            shift and go to state 37


state 21

    (9) contenido_json -> firma_digital COMA equipos .
    (10) contenido_json -> firma_digital COMA equipos . COMA version

    LLAVE_CIERRA    reduce using rule 9 (contenido_json -> firma_digital COMA equipos .)
    COMA            shift and go to state 38


state 22

    (12) contenido_json -> firma_digital COMA version . COMA equipos

    COMA            shift and go to state 39


state 23

    (13) equipos -> EQUIPOS DOS_PUNTOS CORCHETE_ABRE . lista_equipos CORCHETE_CIERRA
    (14) lista_equipos -> . equipo
    (15) lista_equipos -> . lista_equipos COMA equipo
    (16) equipo -> . LLAVE_ABRE campos_equipo LLAVE_CIERRA

    LLAVE_ABRE      shift and go to state 42

    lista_equipos                  shift and go to state 40
    equipo                         shift and go to state 41

state 24

    (82) version -> VERSION DOS_PUNTOS valor_simple .

    COMA            reduce using rule 82 (version -> VERSION DOS_PUNTOS valor_simple .)
    LLAVE_CIERRA    reduce using rule 82 (version -> VERSION DOS_PUNTOS valor_simple .)


state 25

    (29) valor_simple -> A_STRING .

    COMA            reduce using rule 29 (valor_simple -> A_STRING .)
    LLAVE_CIERRA    reduce using rule 29 (valor_simple -> A_STRING .)


state 26

    (30) valor_simple -> LINK .

    COMA            reduce using rule 30 (valor_simple -> LINK .)
    LLAVE_CIERRA    reduce using rule 30 (valor_simple -> LINK .)


state 27

    (31) valor_simple -> EMAIL .

    COMA            reduce using rule 31 (valor_simple -> EMAIL .)
    LLAVE_CIERRA    reduce using rule 31 (valor_simple -> EMAIL .)


state 28

    (32) valor_simple -> NUMBER .

    COMA            reduce using rule 32 (valor_simple -> NUMBER .)
    LLAVE_CIERRA    reduce using rule 32 (valor_simple -> NUMBER .)


state 29

    (33) valor_simple -> TRUE .

    COMA            reduce using rule 33 (valor_simple -> TRUE .)
    LLAVE_CIERRA    reduce using rule 33 (valor_simple -> TRUE .)


state 30

    (34) valor_simple -> FALSE .

    COMA            reduce using rule 34 (valor_simple -> FALSE .)
    LLAVE_CIERRA    reduce using rule 34 (valor_simple -> FALSE .)


state 31

    (35) valor_simple -> NULL .

    COMA            reduce using rule 35 (valor_simple -> NULL .)
    LLAVE_CIERRA    reduce using rule 35 (valor_simple -> NULL .)


state 32

    (36) valor_simple -> DATE .

    COMA            reduce using rule 36 (valor_simple -> DATE .)
    LLAVE_CIERRA    reduce using rule 36 (valor_simple -> DATE .)


state 33

    (83) firma_digital -> FIRMA_DIGITAL DOS_PUNTOS valor_simple .

    COMA            reduce using rule 83 (firma_digital -> FIRMA_DIGITAL DOS_PUNTOS valor_simple .)
    LLAVE_CIERRA    reduce using rule 83 (firma_digital -> FIRMA_DIGITAL DOS_PUNTOS valor_simple .)


state 34

    (5) contenido_json -> equipos COMA version COMA . firma_digital
    (83) firma_digital -> . FIRMA_DIGITAL DOS_PUNTOS valor_simple

    FIRMA_DIGITAL   shift and go to state 9

    firma_digital                  shift and go to state 43

state 35

    (6) contenido_json -> equipos COMA firma_digital COMA . version
    (82) version -> . VERSION DOS_PUNTOS valor_simple

    VERSION         shift and go to state 8

    version                        shift and go to state 44

state 36

    (8) contenido_json -> version COMA equipos COMA . firma_digital
    (83) firma_digital -> . FIRMA_DIGITAL DOS_PUNTOS valor_simple

    FIRMA_DIGITAL   shift and go to state 9

    firma_digital                  shift and go to state 45

state 37

    (11) contenido_json -> version COMA firma_digital COMA . equipos
    (13) equipos -> . EQUIPOS DOS_PUNTOS CORCHETE_ABRE lista_equipos CORCHETE_CIERRA

    EQUIPOS         shift and go to state 7

    equipos                        shift and go to state 46

state 38

    (10) contenido_json -> firma_digital COMA equipos COMA . version
    (82) version -> . VERSION DOS_PUNTOS valor_simple

    VERSION         shift and go to state 8

    version                        shift and go to state 47

state 39

    (12) contenido_json -> firma_digital COMA version COMA . equipos
    (13) equipos -> . EQUIPOS DOS_PUNTOS CORCHETE_ABRE lista_equipos CORCHETE_CIERRA

    EQUIPOS         shift and go to state 7

    equipos                        shift and go to state 48

state 40

    (13) equipos -> EQUIPOS DOS_PUNTOS CORCHETE_ABRE lista_equipos . CORCHETE_CIERRA
    (15) lista_equipos -> lista_equipos . COMA equipo

    CORCHETE_CIERRA shift and go to state 49
    COMA            shift and go to state 50


state 41

    (14) lista_equipos -> equipo .

    CORCHETE_CIERRA reduce using rule 14 (lista_equipos -> equipo .)
    COMA            reduce using rule 14 (lista_equipos -> equipo .)


state 42

    (16) equipo -> LLAVE_ABRE . campos_equipo LLAVE_CIERRA
    (17) campos_equipo -> . campo_equipo
    (18) campos_equipo -> . campos_equipo COMA campo_equipo
    (19) campo_equipo -> . NOMBRE_EQUIPO DOS_PUNTOS valor_simple
    (20) campo_equipo -> . IDENTIDAD_EQUIPO DOS_PUNTOS valor_simple
    (21) campo_equipo -> . CARRERA DOS_PUNTOS valor_simple
    (22) campo_equipo -> . ASIGNATURA DOS_PUNTOS valor_simple
    (23) campo_equipo -> . UNIVERSIDAD_REGIONAL DOS_PUNTOS valor_simple
    (24) campo_equipo -> . ALIANZA_EQUIPO DOS_PUNTOS valor_simple
    (25) campo_equipo -> . A_STRING DOS_PUNTOS valor_simple
    (26) campo_equipo -> . DIRECCION DOS_PUNTOS LLAVE_ABRE campos_direccion LLAVE_CIERRA
    (27) campo_equipo -> . INTEGRANTES DOS_PUNTOS CORCHETE_ABRE lista_integrantes CORCHETE_CIERRA
    (28) campo_equipo -> . PROYECTOS DOS_PUNTOS CORCHETE_ABRE lista_proyectos CORCHETE_CIERRA

    NOMBRE_EQUIPO   shift and go to state 53
    IDENTIDAD_EQUIPO shift and go to state 54
    CARRERA         shift and go to state 55
    ASIGNATURA      shift and go to state 56
    UNIVERSIDAD_REGIONAL shift and go to state 57
    ALIANZA_EQUIPO  shift and go to state 58
    A_STRING        shift and go to state 59
    DIRECCION       shift and go to state 60
    INTEGRANTES     shift and go to state 61
    PROYECTOS       shift and go to state 62

    campos_equipo                  shift and go to state 51
    campo_equipo                   shift and go to state 52

state 43

    (5) contenido_json -> equipos COMA version COMA firma_digital .

    LLAVE_CIERRA    reduce using rule 5 (contenido_json -> equipos COMA version COMA firma_digital .)


state 44

    (6) contenido_json -> equipos COMA firma_digital COMA version .

    LLAVE_CIERRA    reduce using rule 6 (contenido_json -> equipos COMA firma_digital COMA version .)


state 45

    (8) contenido_json -> version COMA equipos COMA firma_digital .

    LLAVE_CIERRA    reduce using rule 8 (contenido_json -> version COMA equipos COMA firma_digital .)


state 46

    (11) contenido_json -> version COMA firma_digital COMA equipos .

    LLAVE_CIERRA    reduce using rule 11 (contenido_json -> version COMA firma_digital COMA equipos .)


state 47

    (10) contenido_json -> firma_digital COMA equipos COMA version .

    LLAVE_CIERRA    reduce using rule 10 (contenido_json -> firma_digital COMA equipos COMA version .)


state 48

    (12) contenido_json -> firma_digital COMA version COMA equipos .

    LLAVE_CIERRA    reduce using rule 12 (contenido_json -> firma_digital COMA version COMA equipos .)


state 49

    (13) equipos -> EQUIPOS DOS_PUNTOS CORCHETE_ABRE lista_equipos CORCHETE_CIERRA .

    COMA            reduce using rule 13 (equipos -> EQUIPOS DOS_PUNTOS CORCHETE_ABRE lista_equipos CORCHETE_CIERRA .)
    LLAVE_CIERRA    reduce using rule 13 (equipos -> EQUIPOS DOS_PUNTOS CORCHETE_ABRE lista_equipos CORCHETE_CIERRA .)


state 50

    (15) lista_equipos -> lista_equipos COMA . equipo
    (16) equipo -> . LLAVE_ABRE campos_equipo LLAVE_CIERRA

    LLAVE_ABRE      shift and go to state 42

    equipo                         shift and go to state 63

state 51

    (16) equipo -> LLAVE_ABRE campos_equipo . LLAVE_CIERRA
    (18) campos_equipo -> campos_equipo . COMA campo_equipo

    LLAVE_CIERRA    shift and go to state 64
    COMA            shift and go to state 65


state 52

    (17) campos_equipo -> campo_equipo .

    LLAVE_CIERRA    reduce using rule 17 (campos_equipo -> campo_equipo .)
    COMA            reduce using rule 17 (campos_equipo -> campo_equipo .)


state 53

    (19) campo_equipo -> NOMBRE_EQUIPO . DOS_PUNTOS valor_simple

    DOS_PUNTOS      shift and go to state 66


state 54

    (20) campo_equipo -> IDENTIDAD_EQUIPO . DOS_PUNTOS valor_simple

    DOS_PUNTOS      shift and go to state 67


state 55

    (21) campo_equipo -> CARRERA . DOS_PUNTOS valor_simple

    DOS_PUNTOS      shift and go to state 68


state 56

    (22) campo_equipo -> ASIGNATURA . DOS_PUNTOS valor_simple

    DOS_PUNTOS      shift and go to state 69


state 57

    (23) campo_equipo -> UNIVERSIDAD_REGIONAL . DOS_PUNTOS valor_simple

    DOS_PUNTOS      shift and go to state 70


state 58

    (24) campo_equipo -> ALIANZA_EQUIPO . DOS_PUNTOS valor_simple

    DOS_PUNTOS      shift and go to state 71


state 59

    (25) campo_equipo -> A_STRING . DOS_PUNTOS valor_simple

    DOS_PUNTOS      shift and go to state 72


state 60

    (26) campo_equipo -> DIRECCION . DOS_PUNTOS LLAVE_ABRE campos_direccion LLAVE_CIERRA

    DOS_PUNTOS      shift and go to state 73


state 61

    (27) campo_equipo -> INTEGRANTES . DOS_PUNTOS CORCHETE_ABRE lista_integrantes CORCHETE_CIERRA

    DOS_PUNTOS      shift and go to state 74


state 62

    (28) campo_equipo -> PROYECTOS . DOS_PUNTOS CORCHETE_ABRE lista_proyectos CORCHETE_CIERRA

    DOS_PUNTOS      shift and go to state 75


state 63

    (15) lista_equipos -> lista_equipos COMA equipo .

    CORCHETE_CIERRA reduce using rule 15 (lista_equipos -> lista_equipos COMA equipo .)
    COMA            reduce using rule 15 (lista_equipos -> lista_equipos COMA equipo .)


state 64

    (16) equipo -> LLAVE_ABRE campos_equipo LLAVE_CIERRA .

    CORCHETE_CIERRA reduce using rule 16 (equipo -> LLAVE_ABRE campos_equipo LLAVE_CIERRA .)
    COMA            reduce using rule 16 (equipo -> LLAVE_ABRE campos_equipo LLAVE_CIERRA .)


state 65

    (18) campos_equipo -> campos_equipo COMA . campo_equipo
    (19) campo_equipo -> . NOMBRE_EQUIPO DOS_PUNTOS valor_simple
    (20) campo_equipo -> . IDENTIDAD_EQUIPO DOS_PUNTOS valor_simple
    (21) campo_equipo -> . CARRERA DOS_PUNTOS valor_simple
    (22) campo_equipo -> . ASIGNATURA DOS_PUNTOS valor_simple
    (23) campo_equipo -> . UNIVERSIDAD_REGIONAL DOS_PUNTOS valor_simple
    (24) campo_equipo -> . ALIANZA_EQUIPO DOS_PUNTOS valor_simple
    (25) campo_equipo -> . A_STRING DOS_PUNTOS valor_simple
    (26) campo_equipo -> . DIRECCION DOS_PUNTOS LLAVE_ABRE campos_direccion LLAVE_CIERRA
    (27) campo_equipo -> . INTEGRANTES DOS_PUNTOS CORCHETE_ABRE lista_integrantes CORCHETE_CIERRA
    (28) campo_equipo -> . PROYECTOS DOS_PUNTOS CORCHETE_ABRE lista_proyectos CORCHETE_CIERRA

    NOMBRE_EQUIPO   shift and go to state 53
    IDENTIDAD_EQUIPO shift and go to state 54
    CARRERA         shift and go to state 55
    ASIGNATURA      shift and go to state 56
    UNIVERSIDAD_REGIONAL shift and go to state 57
    ALIANZA_EQUIPO  shift and go to state 58
    A_STRING        shift and go to state 59
    DIRECCION       shift and go to state 60
    INTEGRANTES     shift and go to state 61
    PROYECTOS       shift and go to state 62

    campo_equipo                   shift and go to state 76

state 66

    (19) campo_equipo -> NOMBRE_EQUIPO DOS_PUNTOS . valor_simple
    (29) valor_simple -> . A_STRING
    (30) valor_simple -> . LINK
    (31) valor_simple -> . EMAIL
    (32) valor_simple -> . NUMBER
    (33) valor_simple -> . TRUE
    (34) valor_simple -> . FALSE
    (35) valor_simple -> . NULL
    (36) valor_simple -> . DATE

    A_STRING        shift and go to state 25
    LINK            shift and go to state 26
    EMAIL           shift and go to state 27
    NUMBER          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NULL            shift and go to state 31
    DATE            shift and go to state 32

    valor_simple                   shift and go to state 77

state 67

    (20) campo_equipo -> IDENTIDAD_EQUIPO DOS_PUNTOS . valor_simple
    (29) valor_simple -> . A_STRING
    (30) valor_simple -> . LINK
    (31) valor_simple -> . EMAIL
    (32) valor_simple -> . NUMBER
    (33) valor_simple -> . TRUE
    (34) valor_simple -> . FALSE
    (35) valor_simple -> . NULL
    (36) valor_simple -> . DATE

    A_STRING        shift and go to state 25
    LINK            shift and go to state 26
    EMAIL           shift and go to state 27
    NUMBER          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NULL            shift and go to state 31
    DATE            shift and go to state 32

    valor_simple                   shift and go to state 78

state 68

    (21) campo_equipo -> CARRERA DOS_PUNTOS . valor_simple
    (29) valor_simple -> . A_STRING
    (30) valor_simple -> . LINK
    (31) valor_simple -> . EMAIL
    (32) valor_simple -> . NUMBER
    (33) valor_simple -> . TRUE
    (34) valor_simple -> . FALSE
    (35) valor_simple -> . NULL
    (36) valor_simple -> . DATE

    A_STRING        shift and go to state 25
    LINK            shift and go to state 26
    EMAIL           shift and go to state 27
    NUMBER          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NULL            shift and go to state 31
    DATE            shift and go to state 32

    valor_simple                   shift and go to state 79

state 69

    (22) campo_equipo -> ASIGNATURA DOS_PUNTOS . valor_simple
    (29) valor_simple -> . A_STRING
    (30) valor_simple -> . LINK
    (31) valor_simple -> . EMAIL
    (32) valor_simple -> . NUMBER
    (33) valor_simple -> . TRUE
    (34) valor_simple -> . FALSE
    (35) valor_simple -> . NULL
    (36) valor_simple -> . DATE

    A_STRING        shift and go to state 25
    LINK            shift and go to state 26
    EMAIL           shift and go to state 27
    NUMBER          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NULL            shift and go to state 31
    DATE            shift and go to state 32

    valor_simple                   shift and go to state 80

state 70

    (23) campo_equipo -> UNIVERSIDAD_REGIONAL DOS_PUNTOS . valor_simple
    (29) valor_simple -> . A_STRING
    (30) valor_simple -> . LINK
    (31) valor_simple -> . EMAIL
    (32) valor_simple -> . NUMBER
    (33) valor_simple -> . TRUE
    (34) valor_simple -> . FALSE
    (35) valor_simple -> . NULL
    (36) valor_simple -> . DATE

    A_STRING        shift and go to state 25
    LINK            shift and go to state 26
    EMAIL           shift and go to state 27
    NUMBER          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NULL            shift and go to state 31
    DATE            shift and go to state 32

    valor_simple                   shift and go to state 81

state 71

    (24) campo_equipo -> ALIANZA_EQUIPO DOS_PUNTOS . valor_simple
    (29) valor_simple -> . A_STRING
    (30) valor_simple -> . LINK
    (31) valor_simple -> . EMAIL
    (32) valor_simple -> . NUMBER
    (33) valor_simple -> . TRUE
    (34) valor_simple -> . FALSE
    (35) valor_simple -> . NULL
    (36) valor_simple -> . DATE

    A_STRING        shift and go to state 25
    LINK            shift and go to state 26
    EMAIL           shift and go to state 27
    NUMBER          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NULL            shift and go to state 31
    DATE            shift and go to state 32

    valor_simple                   shift and go to state 82

state 72
